// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransformOktaVerifyChannelSelection Tests should append same device enroll link when SAMEDEVICE is included as a channel option 1`] = `
{
  "data": {
    "authenticator.channel": "sms",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.select.channel.title.updated",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.sms.label",
              "value": "sms",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.email.label",
              "value": "email",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
              {
                "label": "SAMEDEVICE",
                "value": "samedevice",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "actionParams": {
            "authenticator.channel": "samedevice",
          },
          "content": "oie.enroll.okta_verify.select.channel.ovOnThisDevice",
          "contentClassname": "ov-same-device-enroll-link",
          "step": "select-enrollment-channel",
        },
        "type": "TextWithActionLink",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (qrcode/email) channel options when NOT on mobile and sms is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "qrcode",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.select.channel.title.updated",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.qrcode.label",
              "value": "qrcode",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.email.label",
              "value": "email",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (qrcode/sms) channel options when NOT on mobile and email is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "qrcode",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.select.channel.title.updated",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.qrcode.label",
              "value": "qrcode",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.sms.label",
              "value": "sms",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (sms/email) channel options when NOT on mobile and qrcode is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "sms",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.select.channel.title.updated",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.sms.label",
              "value": "sms",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.email.label",
              "value": "email",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "content": "oie.enroll.okta_verify.switch.channel.link.text",
          "contentClassname": "switch-channel-link",
          "step": "select-enrollment-channel",
        },
        "type": "TextWithActionLink",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (sms/email) channel options when on mobile and email is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "qrcode",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.setup.title",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.qrcode.label",
              "value": "qrcode",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.sms.label",
              "value": "sms",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (sms/email) channel options when on mobile and qrcode is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "sms",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.setup.title",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.sms.label",
              "value": "sms",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.email.label",
              "value": "email",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "options": {
          "content": "oie.enroll.okta_verify.switch.channel.link.text",
          "contentClassname": "switch-channel-link",
          "step": "select-enrollment-channel",
        },
        "type": "TextWithActionLink",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`TransformOktaVerifyChannelSelection Tests should only append (sms/email) channel options when on mobile and sms is the selectedChannel 1`] = `
{
  "data": {
    "authenticator.channel": "qrcode",
  },
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.enroll.okta_verify.setup.title",
        },
        "type": "Title",
      },
      {
        "label": "oie.enroll.okta_verify.select.channel.subtitle",
        "options": {
          "customOptions": [
            {
              "label": "oie.enroll.okta_verify.select.channel.qrcode.label",
              "value": "qrcode",
            },
            {
              "label": "oie.enroll.okta_verify.select.channel.email.label",
              "value": "email",
            },
          ],
          "format": "radio",
          "inputMeta": {
            "name": "authenticator.channel",
            "options": [
              {
                "label": "QRCode",
                "value": "qrcode",
              },
              {
                "label": "SMS",
                "value": "sms",
              },
              {
                "label": "EMAIL",
                "value": "email",
              },
            ],
          },
        },
        "type": "Field",
      },
      {
        "label": "oform.next",
        "options": {
          "step": "select-enrollment-channel",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
